syntax = "proto2";

package com.google.sps.proto;

option java_outer_classname = "GetJoinProto";

message GetJoinRequest {
  required string roomId = 1;
}

message GetJoinResponse {
  required string roomId = 1;
  required uint64 timestamp = 2;
}
